--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_api_to_mongo",
+  "name": "dog_adoption_dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
