--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "\"dog_adoption_dashboard_server\"",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "dotenv": "^16.4.5",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
